# locations_api

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  seed_data.sh  seed_py.py
db/: database.py
models/: models.py
routes/: categories_routes.py  general_routes.py  locations_routes.py
schemas/: schemas.py
utils/: default_categories.py  fresh_recommendations.py
